Fixed navbar overflow bug.

--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -3,6 +3,14 @@ html, body {
     padding: 0;
 }
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 a {
     color: $scoprion;
     text-decoration: none;
