--- a/stylesheets/layout/_navbar.scss
+++ b/stylesheets/layout/_navbar.scss
@@ -3,29 +3,25 @@
 ///
 $navbar-height-full: 60px;
 $navbar-height-medium: 50px;
-$navbar-font-size: 1.125em;
 $navbar-width: 1240px;
-$navbar-padding: 0 50px;
-$navbar-header-nav-width: 600px;
+$navbar-padding: 0 20px;
+$navbar-header-nav-margin: 30px;
 
 header {
     @include breakpoint('large') {
         height: $navbar-height-full;
     }
     @include flexbox();
-    display: relative;
-    // position: fixed;
-    // top: 0;
     width: 100%;
     height: $navbar-height-medium;
+    padding: $navbar-padding;
+    overflow: hidden;
+    justify-content: center;
 
     nav {
         @include flexbox();
         width: $navbar-width;
         max-width: $navbar-width;
-        margin: auto;
-        padding: $navbar-padding;
-        white-space: nowrap;
         justify-content: space-between;
         align-items: center;
     }
@@ -54,8 +50,6 @@ header {
     }
 
     .header-nav {
-        font-size: $navbar-font-size;
-
         li {
             a.login {
                 color: $picton-blue;
@@ -76,24 +70,29 @@ header {
 
     .header-nav {
         @include flexbox();
-        width: $navbar-header-nav-width;
-        justify-content: space-evenly;
         list-style-type: none;
+        margin: 0;
+        padding: 0;
 
         li {
             display: inline;
+            margin-left: $navbar-header-nav-margin;
+
+            &:first-child {
+                margin-left: 0;
+            }
         }
     }
 
-    .header-demo {
+    .header-demo-button {
         @include button(
             $width: 180px,
             $height: 44px,
             $background-color: $white,
             $border-color: $picton-blue
         );
+        margin-left: $navbar-header-nav-margin;
         color: $picton-blue;
-        font-size: $navbar-font-size;
     }
 }
 
@@ -129,6 +128,7 @@ header {
         list-style: none;
         background-color: $white;
         text-align: center;
+        z-index: 1;
 
         li {
             padding: 15px 0;
